# dax-copilot-context-aware-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sample_schema.csv
src/dax_copilot/: __init__.py
src/dax_copilot/agent/: __init__.py  core.py  prompts.py
src/dax_copilot/cli/: __init__.py  main.py
src/dax_copilot/tools/: __init__.py  schema_parser.py
src/dax_copilot/ui/: __init__.py  app.py
tools/: schema_parser.py
